# OSCILLATION_OMEGA

./: .gitignore  CMakeLists.txt  README.md  config.sh  config.yaml
data/make_s20rts/: isoprem808.md  latychev_out.py  print_s20rts.py  s24rts.py  sharmonics.py
data/make_s20rts/rho_ulm/: cat_del_rho_22.m  rho_ulm_re_lay454.dat~
src/: compute_gravitational_potential.f90  compute_moment_of_inertia.f90  compute_volumetric_integral.f90  compute_volumetric_integral_int_sphere.f90  discontinuities.f90  epsilon_a.txt  fort.112  kernel.txt  legendre_quadrature.f90  oscillation_omega.f90  out1  python_wrapper.py  python_wrapper.py.BAK  python_wrapper.py~  read_model.f90  read_model.f90.BAK  ylm.f90
